src/objects/Project_Role__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Class__c</fullName>
        <inlineHelpText>The accounting class associated with this particular time tracking bucket</inlineHelpText>
        <label>Accounting Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Fee for Service</fullName>
                    <default>true</default>
                    <label>Fee for Service</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, this Project Role is active and available for time-tracking (this role will appear in the timesheet Visualforce page). If unchecked, this Project Role is inactive and not available for time-tracking.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Amount_Override__c</fullName>
        <inlineHelpText>If the work is prepaid, this field sets that prepaid amount for the Project Role instead of summarizing billable work from time logs.</inlineHelpText>
        <label>Actual Amount Override</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Amount__c</fullName>
        <inlineHelpText>This field calculates Actual Hours x Hourly Rate.</inlineHelpText>
        <label>Actual Amount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Hours_This_Month__c</fullName>
        <description>Uses DLRS</description>
        <label>Actual Hours This Month</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <inlineHelpText>Actual project hours in this particular project role, summarized and based on Actual Hours for related Time Log entries</inlineHelpText>
        <label>Actual Hours</label>
        <summarizedField>Project_Time_Log__c.Actual_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Project_Time_Log__c.Billable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Time_Log__c.Project_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billable_Hours_This_Month__c</fullName>
        <description>Uses DLRS</description>
        <label>Billable Hours This Month</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budgeted_Amount__c</fullName>
        <inlineHelpText>This field calculates Budgeted Hours x Hourly Rate.</inlineHelpText>
        <label>Budgeted Amount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budgeted_Hours__c</fullName>
        <inlineHelpText>Allocation of budgeted hours in this particular project role. Used in scoping and estimating, this determines the fixed estimate and contracted amount for a particular role on a project. Not used for individual staff projections, see Projected Hours</inlineHelpText>
        <label>Budgeted Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description of this project role.  This value will show up on the line-item breakdown of project fees on invoices</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <inlineHelpText>The hourly rate for this project role</inlineHelpText>
        <label>Hourly Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Time_Logs__c</fullName>
        <label>Number of Time Logs</label>
        <summaryFilterItems>
            <field>Project_Time_Log__c.Billable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Time_Log__c.Project_Role__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prepaid_Hour_Expiration_Date__c</fullName>
        <description>The date which any prepaid hours associated with this project role will expire</description>
        <inlineHelpText>The date which any prepaid hours associated with this project role will expire</inlineHelpText>
        <label>Prepaid Hour Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectRole_Import_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Use as an external ID for a data import task. Okay to overwrite for another import.</description>
        <externalId>true</externalId>
        <inlineHelpText>Use as an external ID for a data import task. Okay to overwrite for another import.</inlineHelpText>
        <label>Import Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project Roles</relationshipLabel>
        <relationshipName>Project_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Projected_Amount__c</fullName>
        <inlineHelpText>Calculated field, Projected Hours x Hourly Rate</inlineHelpText>
        <label>Projected Amount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Hours__c</fullName>
        <inlineHelpText>Projected project hours in this particular project role, summarized and based on Projected Hours for related Time Log entries. These are logged projected hours by a single person, not an aggregate, fixed budget estimate for any person in a given role.</inlineHelpText>
        <label>Projected Hours</label>
        <summarizedField>Project_Time_Log__c.Projected_Hours__c</summarizedField>
        <summaryForeignKey>Project_Time_Log__c.Project_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Remaining_Amount__c</fullName>
        <formula>IF(OR(Budgeted_Amount__c=NULL,Budgeted_Amount__c=0),0,( Budgeted_Amount__c - Actual_Amount__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Hours__c</fullName>
        <formula>IF(OR(Budgeted_Hours__c=NULL,Budgeted_Hours__c=0),0,(Budgeted_Hours__c -  Actual_Hours__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <inlineHelpText>Role associated with this time tracking bucket.  Different roles will have different billable rates, which is also based on the type of client (nonprofit, foundation, etc.)</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_of_Work__c</fullName>
        <description>Uses DLRS</description>
        <inlineHelpText>Sum of time log value of work (formula takes the overall prepaid amount and divides by the billed hours to determine value of work, or otherwise simply displays standard log amount)</inlineHelpText>
        <label>Value of Work</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Project Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Project__c</columns>
        <columns>Actual_Amount__c</columns>
        <columns>Actual_Hours__c</columns>
        <columns>Budgeted_Amount__c</columns>
        <columns>Budgeted_Hours__c</columns>
        <columns>Remaining_Hours__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prepaid_time_exceeded</fullName>
        <active>true</active>
        <description>Actual prepaid time may not exceed budgeted hours</description>
        <errorConditionFormula>AND(CONTAINS( Name , &quot;repaid&quot;), (  Actual_Hours__c &gt;  Budgeted_Hours__c  ), YEAR(DATEVALUE(CreatedDate))&gt;2019  )</errorConditionFormula>
        <errorMessage>Prepaid actual hours may not exceed budgeted hours.</errorMessage>
    </validationRules>
</CustomObject>